fix footer spacing

--- a/src/components/layout/footer.scss
+++ b/src/components/layout/footer.scss
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     background-position: 2px 0px;
     width: 1042px;
-    margin-top: 20px;
+    margin-top: 38px;
 
     .navbar {
         list-style-type: none;
@@ -19,7 +19,7 @@
         color: #fff;
         position: absolute;
         top: 0px;
-        left: 600px;
+        left: 560px;
 
         margin-top: 0px;
 
